Working on the coveralls

--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
-    "test": "jest --config jestconfig.json",
+    "test": "jest --config jestconfig.json --coverage --coverageReporters=text-lcov | coveralls",
     "build": "tsc",
     "format": "prettier --write \"src/**/*ts\" \"src/**/*js\"",
     "lint": "tslint -p tsconfig.json",
+    "coverage": "jest --coverage --coverageReporters=text-lcov | coveralls",
     "webpack": "webpack --config webpack.config.js",
     "prepare": "npm run webpack",
     "prepublishOnly": "npm test && npm run lint",
@@ -44,6 +45,7 @@
     "@types/node": "^11.13.0",
     "@types/webpack-env": "^1.13.9",
     "core-js": "^2.6.5",
+    "coveralls": "^3.0.3",
     "css-loader": "^2.1.1",
     "element-closest": "^3.0.1",
     "identity-obj-proxy": "^3.0.0",
