--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepare": "npm run webpack",
     "prepublishOnly": "npm test && npm run lint",
     "preversion": "npm run lint",
-    "version": "npm run format && git add -A src",
+    "version": "git add -A src",
     "postversion": "git push && git push --tags"
   },
   "repository": {
