--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json --coverage --coverageReporters=text-lcov | coveralls",
+    "local": "jest --config jestconfig.json",
     "build": "tsc",
     "format": "prettier --write \"src/**/*ts\" \"src/**/*js\"",
     "lint": "tslint -p tsconfig.json",
